--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,177 @@
-body{
-    background-color: green;
+*{
+    box-sizing: border-box;
 }
+
+body{
+    background-color: rgba(40, 19, 99, 0.1);
+    margin: 0;
+    position: relative;
+    height: 100vh;
+    font-family: sans-serif;
+}
+
+.contact-container{
+    display: flex;
+    max-width: 1000px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+@media (max-width: 1000px){
+    .contact-container{
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 645px){
+    .contact-container{
+        margin-top: 120px;
+        position: unset;
+        transform: unset;
+        top: unset;
+        left: unset;
+    }
+}
+
+.contact-container .home-btn{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: -60px;
+    left: 50%;
+    padding: 13px 25px;
+    text-transform: capitalize;
+    background-color:rgb(41, 219, 210);
+    background: linear-gradient(11deg, rgb(41, 219, 210) 49%, rgba(0,212,255,1) 100%);
+    border: none;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: .5s;
+    text-decoration: none;
+}
+
+.contact-container .home-btn:hover{
+    opacity: .85;
+    border-radius: 10px;
+}
+
+.contact-container .info{
+    background-color:rgb(41, 219, 210);
+    background: linear-gradient(11deg, rgb(41, 219, 210) 49%, rgba(0,212,255,1) 100%);
+    flex-basis: 35%;
+    color: white;
+    padding: 40px;
+}
+
+.contact-container .info h2{
+    font-weight:normal;
+}
+
+.contact-container .info p{
+    color: rgba(255, 255, 255, 0.8);
+    line-height: 1.7;
+}
+
+.contact-container .info ul{
+    padding-left: 0;
+
+}
+
+.contact-container .info ul li{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    line-height: 1.7;
+}
+
+.contact-container .info ul li i{
+    padding: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    color: rgba(255, 255, 255, 0.95);
+}
+
+.contact-container .form{
+    flex-basis: 65%;
+    background-color: white;
+    padding: 40px;
+}
+
+.contact-container .form h2{
+    color: #222;
+}
+
+.contact-container .form .box{
+    display: flex;
+    gap: 25px;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 645px){
+    .contact-container .form .box{
+        flex-direction: column;
+    }
+}
+
+.contact-container .form .field{
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-container .form .field.mr{
+    margin: 25px 0;
+}
+
+.contact-container .form .box .field{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-basis: 50%;
+}
+
+.contact-container .form input[type="text"],
+.contact-container .form input[type="email"],
+.contact-container .form textarea{
+    border: none;
+    border-bottom: 1px solid #ccc;
+    font-size: 18px;
+    margin-top: 5px;
+    padding: 5px;
+}
+
+.contact-container .form input[type="text"]:focus,
+.contact-container .form input[type="email"]:focus,
+.contact-container .form textarea:focus{
+    outline-style: solid;
+    outline-width: 2px;
+    outline-color: #bbb;
+}
+
+.contact-container .form label{
+    font-weight: bold;
+    color: #222;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+.contact-container .form button{
+    margin-top: 20px;
+    padding: 15px 20px;
+    text-transform: capitalize;
+    background-color:rgb(41, 219, 210);
+    background: linear-gradient(11deg, rgb(41, 219, 210) 49%, rgba(0,212,255,1) 100%);
+    border: none;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.contact-container .form button:hover{
+    opacity: .85;
+}
+
