--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,9 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/all.min.css">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
-    <h1>contact form</h1>
-    <a href="/">home</a>
+    <div class="contact-container">
+        <a class="home-btn" href="/">home</a>
+        <div class="info">
+            <h2>Let's get in touch</h2>
+            <p>We're open for any suggestion or just to have a chat</p>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Address: 123 asdf 5th sfds, nfds hds</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-phone"></i>
+                    <p>Phone: +1234 1234 45</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>Email: baddredineseif@gmail.com</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <p>Website: Website.com</p>
+                </li>
+            </ul>
+        </div>
+        <div class="form">
+            <h2>Get in touch</h2>
+            <form action="" method="">
+                <div class="box">
+                    <div class="field">
+                        <label for="name">full name</label>
+                        <input type="text" name="name" placeholder="Full Name">
+                    </div>
+                    <div class="field">
+                        <label for="name">email</label>
+                        <input type="email" name="email" placeholder="Email">
+                    </div>
+                </div>
+                <div class="field mr">
+                    <label for="subject">subject</label>
+                    <input type="text" name="subject-" placeholder="Subject">
+                </div>
+                <div class="field">
+                    <label for="message">message</label>
+                    <textarea rows="4" cols="50" name="message-" placeholder="Message"></textarea>
+                </div>
+                <button>send message</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
