--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact from</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/c03ec31dc2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/all.min.css">
 </head>
 <body>
     <h1>index</h1>
     <a href="/contact">contact</a>
+    <i class="fa-brands fa-42-group"></i>
+    <i class="fa-brands fa-facebook"></i>
+    hh
 </body>
 </html>
