backend: contact form functionality

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -37,7 +37,7 @@
         </div>
         <div class="form">
             <h2>Get in touch</h2>
-            <form action="" method="">
+            <form name="contact" action="" method="">
                 <div class="box">
                     <div class="field">
                         <label for="name">full name</label>
@@ -50,11 +50,11 @@
                 </div>
                 <div class="field mr">
                     <label for="subject">subject</label>
-                    <input type="text" name="subject-" placeholder="Subject">
+                    <input type="text" name="subject" placeholder="Subject">
                 </div>
                 <div class="field">
                     <label for="message">message</label>
-                    <textarea rows="4" cols="50" name="message-" placeholder="Message"></textarea>
+                    <textarea rows="4" cols="50" name="message" placeholder="Message"></textarea>
                 </div>
                 <button>send message</button>
             </form>
